syntax = "proto3";
option java_multiple_files = true;

package gonlink.online;
import "google/protobuf/empty.proto";

// === GenerateShortCode ===
message GenerateShortCodeRequest{
  string email = 1;
  string originalUrl = 2;
}

message GenerateShortCodeResponse{
  string shortCode = 1;
}

// === GetOriginalUrl ===
message GetOriginalUrlRequest{
  string shortCode = 1;
}

message GetOriginalUrlResponse{
  string originalUrl = 1;
}

service UrlShortenerService {
  rpc generateShortCode(GenerateShortCodeRequest) returns(GenerateShortCodeResponse){}
  rpc getOriginalUrl(GetOriginalUrlRequest) returns(GetOriginalUrlResponse){}
}



